--- a/resources/style/top-bar.css
+++ b/resources/style/top-bar.css
@@ -19,11 +19,12 @@
     -fx-font-size: 16px;
 }
 .menu:hover {
-    -fx-background-color: #ff910a;
+    -fx-background-color: rgba(241, 233, 218, 0.1);
 }
 .context-menu {
     -fx-background-color: #27272B;
     -fx-min-width: 100px;
+    -fx-padding: 0;
 }
 
 /* Menu items */
@@ -32,10 +33,10 @@
     -fx-font-family: "Verdana, sans-serif";
     -fx-font-weight: normal;
     -fx-font-size: 15px;
-    -fx-padding: 6px 10px;
+    -fx-padding: 8px 12px;
 }
 .menu-item:hover {
-    -fx-background-color: #ff910a;
+    -fx-background-color: rgba(241, 233, 218, 0.1);
 }
 .menu-item > .label {
     -fx-text-fill: #f1e9da !important;
