--- a/resources/style/game.css
+++ b/resources/style/game.css
@@ -1,8 +1,11 @@
+.players-container {
+    -fx-padding: 50px 70px;
+}
 .player-info {
-    -fx-text-fill: #f1e9da;
-    -fx-fill: #f1e9da;
+    -fx-text-fill: rgba(241, 233, 218, 0.3);
+    -fx-fill: rgba(241, 233, 218, 0.3);
     -fx-font-family: "Verdana, sans-serif";
-    -fx-font-size: 25;
+    -fx-font-size: 32;
     -fx-font-weight: bold;
 }
 
