--- a/resources/style/game.css
+++ b/resources/style/game.css
@@ -20,6 +20,16 @@
     -fx-stroke-width: 1;
 }
 
+.goal-message {
+    -fx-text-fill: #FF910A;
+    -fx-fill: #FF910A;
+    -fx-font-family: "Verdana, sans-serif";
+    -fx-font-size: 58;
+    -fx-font-weight: bold;
+    -fx-text-alignment: center;
+    -fx-effect: dropshadow( three-pass-box , rgba(255, 145, 10, 0.3), 20, 0.0 , 0 , 1 );
+}
+
 .racket {
     -fx-fill: #FF910A;
     -fx-effect: dropshadow( three-pass-box , #ff910a, 10, 0.0 , 0 , 1 );
