--- a/resources/style/game.css
+++ b/resources/style/game.css
@@ -28,6 +28,7 @@
     -fx-font-weight: bold;
     -fx-text-alignment: center;
     -fx-effect: dropshadow( three-pass-box , rgba(255, 145, 10, 0.3), 20, 0.0 , 0 , 1 );
+    -fx-stroke-width: 0;
 }
 
 .racket {
