--- a/app/src/main/resources/style/top-bar.css
+++ b/app/src/main/resources/style/top-bar.css
@@ -1,9 +1,16 @@
 /* Menu Bar */
 .menu-bar {
+    -fx-background-image: url('../images/bg.jpg');
+    -fx-background-size: cover;
     -fx-background-color: rgba(241, 233, 218, 0.05);
+
     -fx-text-fill: #f1e9da !important;
     -fx-fill: #f1e9da !important;
     -fx-padding: 0px;
+    
+    -fx-effect: dropshadow( three-pass-box , rgba(255, 145, 10, 0.6), 20, 0.0 , 0 , 1 );
+    -fx-border-width: 0 0 3 0;
+    -fx-border-color: #ff910a;
 }
 
 /* Menu */
@@ -22,7 +29,10 @@
     -fx-background-color: rgba(241, 233, 218, 0.1);
 }
 .context-menu {
+    -fx-background-image: url('../images/bg.jpg');
+    -fx-background-size: cover;
     -fx-background-color: rgba(241, 233, 218, 0.05);
+
     -fx-min-width: 100px;
     -fx-padding: 0;
 }
